--- a/assets/css/layout/_main.scss
+++ b/assets/css/layout/_main.scss
@@ -50,6 +50,9 @@
   border-radius: 10px;
   border: none;
 }
+.block-2 {
+  margin-right: 40px;
+}
 .pagination {
   margin-top: 100px;
   display: flex;
@@ -74,7 +77,7 @@
 }
 
 @media (max-width: 1400px) {
-  .main__content{
+  .main__content {
     padding-left: 30px;
   }
   .main__inner {
@@ -82,6 +85,9 @@
     flex-direction: column;
     align-items: center;
     .block-1 {
+      margin-right: 0;
+    }
+    .block-2 {
       margin-right: 0;
     }
   }
